--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Run App Module Unit Tests
+      run: ./gradlew testDebugUnitTest
